0403 17:540f15b3130f7fe5cf6590ed01639782487a884346

--- a/BleLibs/.gitignore
+++ b/BleLibs/.gitignore
@@ -1,5 +1,7 @@
 *.iml
 .gradle
+/.idea
+/.idea/sonarlint/
 /local.properties
 /.idea/caches
 /.idea/libraries
@@ -13,3 +15,5 @@
 .externalNativeBuild
 .cxx
 local.properties
+gradle.properties
+
