--- a/classicBluLib/.gitignore
+++ b/classicBluLib/.gitignore
@@ -1,1 +1,22 @@
+*.iml
+*.class
+*.log
+*.jar
+*.apk
+.gradle
+/.idea
+/.idea/sonarlint/
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
 /build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
+gradle.properties
