--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 *.iml
 .gradle
+/.idea
+/.idea/sonarlint/
 /local.properties
 /.idea/caches
 /.idea/libraries
@@ -13,3 +15,4 @@
 .externalNativeBuild
 .cxx
 local.properties
+gradle.properties
