--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" />
 
-
     <application
         android:name=".BaseApplication"
         android:allowBackup="true"
@@ -23,32 +22,37 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SYZBlePrinter"
         tools:targetApi="31">
-
         <activity
-            android:name=".MainActivity4"
-            android:exported="true">
-
-        </activity>
-        <activity
-            android:name=".MainActivity3"
+            android:name=".WelcomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <!--   <intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity4"
+            android:exported="true"></activity>
+        <activity
+            android:name=".MainActivity3"
+            android:exported="true">
+
+            <!--
+               <intent-filter>
                    <action android:name="android.intent.action.MAIN" />
 
                    <category android:name="android.intent.category.LAUNCHER" />
-               </intent-filter>-->
+               </intent-filter>
+            -->
         </activity>
         <activity
             android:name=".MainActivity2"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.SYZBlePrinter"></activity>
+            android:theme="@style/Theme.SYZBlePrinter" >
+
+        </activity>
 
         <service android:name="com.issyzone.blelibs.service.BleService" />
 
@@ -58,16 +62,19 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.SYZBlePrinter">
 
-            <!--           <intent-filter>
+            <!--
+                           <intent-filter>
                            <action android:name="android.intent.action.MAIN" />
 
                            <category android:name="android.intent.category.LAUNCHER" />
-                       </intent-filter>-->
-            <!--            <intent-filter>-->
-            <!--                <action android:name="android.intent.action.MAIN" />-->
+                       </intent-filter>
+            -->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
 
-            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
-            <!--            </intent-filter>-->
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
     </application>
 
