--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -93,7 +93,8 @@ exoplayer-core = { group = "com.google.android.exoplayer", name = "exoplayer-cor
 exoplayer-dash = { group = "com.google.android.exoplayer", name = "exoplayer-dash", version = "2.18.5" }
 exoplayer-ui = { group = "com.google.android.exoplayer", name = "exoplayer-ui", version = "2.18.5" }
 
-
+commons-math3 = { group = "org.apache.commons", name = "commons-math3", version = "3.6.1" }
+opencv = { group = "org.opencv", name = "opencv", version = "4.9.0" }
 #aop
 aspectjtools = { group = "org.aspectj", name = "aspectjtools", version = "1.8.9" }
 aspectjweaver = { group = "org.aspectj", name = "aspectjweaver", version = "1.8.9" }
