--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.SYZBlePrinter"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity5"
+            android:exported="false" />
+        <activity
             android:name=".WelcomeActivity"
             android:exported="true">
             <intent-filter>
@@ -33,7 +36,7 @@
         </activity>
         <activity
             android:name=".MainActivity4"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".MainActivity3"
             android:exported="true">
@@ -50,9 +53,7 @@
             android:name=".MainActivity2"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.SYZBlePrinter" >
-
-        </activity>
+            android:theme="@style/Theme.SYZBlePrinter"></activity>
 
         <service android:name="com.issyzone.blelibs.service.BleService" />
 
