--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,17 @@
         android:theme="@style/Theme.SYZBlePrinter"
         tools:targetApi="31">
         <activity
+            android:name=".Main6Activity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity5"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity6"
+            android:exported="false" />
+
+        <activity
+            android:name=".MainActivity7"
             android:exported="false" />
         <activity
             android:name=".WelcomeActivity"
@@ -53,7 +63,7 @@
             android:name=".MainActivity2"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.SYZBlePrinter"></activity>
+            android:theme="@style/Theme.SYZBlePrinter" />
 
         <service android:name="com.issyzone.blelibs.service.BleService" />
 
