--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:theme="@style/Theme.SYZBlePrinter"
         tools:targetApi="31">
         <activity
+            android:name=".A4TestActivity"
+            android:exported="false" />
+        <activity
             android:name=".Main6Activity"
             android:exported="false" />
         <activity
@@ -30,7 +33,6 @@
         <activity
             android:name=".MainActivity6"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity7"
             android:exported="false" />
@@ -67,7 +69,7 @@
         <service android:name="com.issyzone.blelibs.service.BleService" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".MainActivity8"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.SYZBlePrinter">
