0520  添加发送完命令

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,10 @@
             android:name=".MainActivity4"
             android:exported="true" />
         <activity
+            android:name=".TwoInchActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity3"
             android:exported="true">
 
