--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SYZBlePrinter"
         tools:targetApi="31">
+
         <activity
             android:name=".A4TestActivity"
-            android:exported="false" />
-<!--        <activity-->
-<!--            android:name=".Main6Activity"-->
-<!--            android:exported="false" />-->
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".Main6Activity" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".MainActivity5"
             android:exported="false" />
@@ -39,13 +39,17 @@
         <activity
             android:name=".MainActivity10"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity9"
             android:exported="false" />
         <activity
             android:name=".WelcomeActivity"
             android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".MyComposeActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -57,8 +61,8 @@
             android:exported="true" />
         <activity
             android:name=".TwoInchActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".MainActivity3"
             android:exported="true">
