--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -9,6 +9,7 @@ compose-bom = "androidx.compose:compose-bom:2023.08.00"
 appcompat = "1.7.0"
 material = "1.11.0"
 kotlin = "1.9.0"
+koin = "3.4.0"
 constraintlayout = "2.1.4"
 org-jetbrains-kotlin-jvm = "1.9.0"
 activity-compose = "1.8.2"
@@ -30,6 +31,11 @@ androidLibrary = { id = "com.android.library", version.ref = "agp" }
 
 
 [libraries]
+koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koin" }
+koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
+koin-android-compat = { group = "io.insert-koin", name = "koin-android-compat", version.ref = "koin" }
+
+
 protobuf-gradle-plugin = { module = "com.google.protobuf:protobuf-gradle-plugin", version = "0.8.8" }
 lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version = "2.8.2" }
 
@@ -43,7 +49,6 @@ compose-material3 = { module = "androidx.compose.material3:material3" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
-
 
 
 asm = { module = "org.ow2.asm:asm", version = "9.2" }
@@ -67,7 +72,7 @@ coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-androi
 page-runtime = { module = "androidx.paging:paging-runtime", version = "3.2.1" }
 kotlin-std-lib = { module = "org.jetbrains.kotlin:kotlin-stdlib-common", version = "1.9.22" }
 ##http
-glide = { module = "com.github.bumptech.glide:glide", version = "4.15.0" }
+glide = { module = "com.github.bumptech.glide:glide", version = "4.16.0" }
 glide-compiler = { module = "com.github.bumptech.glide:compiler", version = "4.15.0" }
 glide-transformations = { module = "jp.wasabeef:glide-transformations", version = "4.3.0" }
 
@@ -102,7 +107,7 @@ opencv = { group = "org.opencv", name = "opencv", version = "4.9.0" }
 aspectjtools = { group = "org.aspectj", name = "aspectjtools", version = "1.8.9" }
 aspectjweaver = { group = "org.aspectj", name = "aspectjweaver", version = "1.8.9" }
 aspectjrt = { group = "org.aspectj", name = "aspectjrt", version = "1.8.13" }
-
+bluetoothX = { group = "androidx.bluetooth", name = "bluetooth",version = "1.0.0-alpha02" }
 #room
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room_version" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room_version" }
@@ -123,6 +128,8 @@ mmkv = { group = "com.tencent", name = "mmkv", version = "1.3.3" }
 rxpermissions = { group = "com.github.tbruyelle", name = "rxpermissions", version = "0.12" }
 
 logger = { group = "com.orhanobut", name = "logger", version = "2.2.0" }
+
+bugly={group="com.tencent.bugly",name="crashreport",version="4.1.9.3"}
 
 baserecyclerviewadapterhelper4 = { group = "io.github.cymchad", name = "BaseRecyclerViewAdapterHelper4", version = "4.1.4" }
 
@@ -154,3 +161,4 @@ room = ["room-runtime", "room-ktx"]
 work-manager = ["work-runtime-ktx", "work-gcm", "work-testing", "work-multiprocess"]
 proto3=["protobuf-java"]
 kotlin=["core-ktx","appcompat","material"]
+koin = ["koin-core", "koin-android", "koin-android-compat"]
