--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,16 +45,15 @@
         <activity
             android:name=".WelcomeActivity"
             android:exported="true">
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".MyComposeActivity"
             android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity4"
@@ -76,10 +75,10 @@
             -->
         </activity>
         <activity
-            android:name=".MainActivity2"
+            android:name=".ScanBluActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.SYZBlePrinter" />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
 
         <service android:name="com.issyzone.blelibs.service.BleService" />
 
